2012-03-27  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Compensate for differences in printf
	implementations with regard to printing floating point exponents.
	by deleting any plus sign and leading zeros after the 'e'.

	* tests/009/json.expected: Regenerated.

2012-03-26  Kaz Kylheku  <kaz@kylheku.com>

	Filtering on lists and nested lists is hereby made to work.
	For instance given @(bind a ("a" "b" "c")) it is now possible
	to do @(filter :upcase a) whereby a promptly takes on the value
	("A" "B" "C").

	* filter.c (string_filter): Function renamed to string_tree_filter.
	(compound_filter): Follows rename.
	(filter_string): Function renamed to filter string tree.
	Can filter tree of strings, or possibly other objects,
	if the filter function allows.
	(filter_equal): No special case test for objects that are strings.
	Just put them through the filter.

	* filter.h (filter_string): Declaration updated.

	* match.c (format_field, subst_vars, v_filter): Follow rename.

2012-03-26  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_output): Bugfix: we should flush the stream
	after each @(output) block. Otherwise if output blocks
	that go to standard output are interleaved with output blocks
	which pipe to some command which then goes to standard out,
	the output won't be in the proper order.

2012-03-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New intrinsic num-str registered.

	* filter.c (tonumber_k, tointeger_k, tofloat_k, hextoint_k):
	New keyword variables.
	(filter_init): New variables initialized; new filters registered.

	* filter.h (tonumber_k, tointeger_k, tofloat_k, hextoint_k):
	Declared.

	* lib.c (num_str): New function.

	* lib.h (num_str): Declared.

	* txr.1: New filters documented.

2012-03-26  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (to_float): Fix unterminated argument list in throwf.

	* lib.c (funcall): Likewise.

2012-03-24  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (rebind_s): New symbol variable.
